# ec530-event-driven-image-retrieval-system

./: .gitignore  README.md  pyproject.toml
data/: sample_events.jsonl
docs/: ARCHITECTURE_SCRIPT.md  DELIVERABLES.md  PRESENTATION_FLOW_WITH_CODE_CUES.md  PRESENTATION_SCRIPT_CN.md  PRESENTATION_SCRIPT_EN.md
scripts/: check_submission.sh  generate_terminal_screenshots.py  run_demo.py
src/retrieval_system/: __init__.py  bus.py  contracts.py  event_generator.py  message_definitions.py  services.py  stores.py  system.py  topics.py  vector_math.py
tests/: test_contracts.py  test_event_generator.py  test_failures.py  test_message_definitions.py  test_pipeline.py
